--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,6 @@ manganis = "0.2.1"
 console = "0.15.8"
 tailwind_fuse = { version = "0.2.0", features = ["variant"] }
 
+web-sys = {version = "0.3.69"}
+
 component-derive = { path = "component-derive" }
