--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,12 @@ dioxus-logger = "0.4.1"
 manganis = "0.2.1"
 console = "0.15.8"
 tailwind_fuse = { version = "0.2.0", features = ["variant"] }
-
+dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands"] }
 web-sys = {version = "0.3.69"}
 
 component-derive = { path = "component-derive" }
 props-component-macro = { path = "props-component-macro" }
+
+[patch.crates-io]
+dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "7eccc7a104df013b06c104fc1275450d2747e78c" }
+
