--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ dioxus-logger = "0.4.1"
 manganis = "0.2.1"
 console = "0.15.8"
 tailwind_fuse = { version = "0.2.0", features = ["variant"] }
-dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands"] }
+dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands", "feather"] }
 web-sys = {version = "0.3.69"}
 
 component-derive = { path = "component-derive" }
