Removed cargo-expands from props-component-macro + removed form builder from lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = ["props-component-macro", "form_builder"] }
+workspace = { members = ["props-component-macro"] }
 
 [package]
 name = "dioxus_components_bin"
@@ -26,10 +26,8 @@ tailwind_fuse = { version = "0.2.0", features = ["variant"] }
 dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands", "font-awesome-regular","feather"] }
 web-sys = {version = "0.3.69", features = ["Element"]}
 props-component-macro = { path = "props-component-macro" }
-form_builder = { path = "form_builder" }
 
 # This is to keep the dioxus from dioxus-free-icons from conflicting with the one we are using
 # Meaning basically to keep them both on the same version
 [patch.crates-io]
 dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9ab09b3480ba2ad3b77d16c5e86382a62258194" }
-
