Changed lib name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 workspace = { members = ["props-component-macro"] }
 
 [package]
-name = "dioxus_components_bin"
+name = "dioxus_components"
 version = "0.1.0"
 edition = "2021"
-
-# [lib]
-# name = "dioxus_comps"
 
 [dependencies]
 futures = "0.3.30"
