Updated dependencies in cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,9 @@ edition = "2021"
 # name = "dioxus_comps"
 
 [dependencies]
-futures = "0.3.30"
-reqwest = { version = "0.11.24", features = ["json"] }
-serde = "1.0.196"
-serde_json = "1.0.113"
-console_error_panic_hook = "0.1.7"
 log = "0.4.17"
-tracing-wasm = "0.2.1"
-tracing = "0.1.40"
 
-dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9ab09b3480ba2ad3b77d16c5e86382a62258194", features = ["web", "router"] }
+dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "c9ab09b3480ba2ad3b77d16c5e86382a62258194", features = ["web"] }
 dioxus-logger = "0.4.1"
 manganis = "0.2.1"
 console = "0.15.8"
