--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ console = "0.15.8"
 tailwind_fuse = { version = "0.2.0", features = ["variant"] }
 web-sys = {version = "0.3.69", features = ["Element"]}
 
-form_builder = { git = "ssh://github.com/ZialeOrg/form_builder.git", branch = "feat-version1.0" }
+form_builder = { git = "ssh://github.com/ZialeOrg/form_builder.git", branch = "add-table" }
 slugify = "0.1.0"
