--- a/docsite/Cargo.toml
+++ b/docsite/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/docsite/main.rs"
 
 [dependencies]
 
+docsite-macro = { path = "./docsite-macro" }
 dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "0eb16f27d4a66f654d18fe46fa7f0d50180a1a28", features = ["web", "router"] }
 dioxus-logger = "0.4.1"
 manganis = "0.2.2"
