LightSwitch persitent working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ console = "0.15.8"
 tailwind_fuse = { version = "0.2.0", features = ["variant"] }
 web-sys = {version = "0.3.69", features = ["Element"]}
 
+serde_json = "1.0.1"
+
 form_builder = { git = "ssh://github.com/ZialeOrg/form_builder.git", branch = "add-table" }
 slugify = "0.1.0"
