--- a/dioxus-components-macro/Cargo.toml
+++ b/dioxus-components-macro/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "props-component-macro"
+name = "dioxus-components-macro"
 version = "0.1.0"
 edition = "2021"
+authors = ["Louis Truchelut"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 proc-macro = true
+authors = ["Louis Truchelut"]
 
 [dependencies]
 proc-macro2 = "1.0.79"
