--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,4 @@ serde_json = "1.0.1"
 form_builder = { git = "ssh://github.com/ZialeOrg/form_builder.git", branch = "add-table" }
 slugify = "0.1.0"
 
-async-std = "=1.12.0"
+gloo-timers = { version = "0.3.0", features = ["futures"] }
