--- a/docsite/Cargo.toml
+++ b/docsite/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/docsite/main.rs"
 [dependencies]
 
 docsite-macro = { path = "./docsite-macro" }
-dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "f76c80bab20f71acc14b330f3b565926b352cb3f", features = ["web", "router"] }
+dioxus = { version = "0.6.1", features = ["web", "router"] }
 dioxus-logger = "0.4.1"
 manganis = "0.2.2"
 console_error_panic_hook = "0.1.7"
