fix docsite, toaster, button group; add 404 page, home page, footer

--- a/docsite/Cargo.toml
+++ b/docsite/Cargo.toml
@@ -22,6 +22,7 @@ tracing = "0.1.40"
 console = "0.15.8"
 
 dioxus_components = { path = "../.", features = ["theme"] }
+chrono = "0.4.39"
 
 [workspace]
 
