--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,21 @@ theme = []
 [dependencies]
 
 dioxus-components-macro = { path = "./dioxus-components-macro" }
-log = "0.4.22"
-dioxus = { version = "0.6.2", features = ["web"] }
+log = "0.4.25"
+dioxus = { version = "0.6.3", features = ["web"] }
 dioxus-logger = "0.4.1"
 manganis = "0.2.2"
 console = "0.15.10"
-tailwind_fuse = { version = "0.3.1", features = ["variant"] }
-web-sys = {version = "0.3.77", features = ["Element"]}
+tailwind_fuse = { version = "0.3.2", features = ["variant"] }
 
-serde_json = "1.0.135"
+serde_json = "1.0.138"
 
 slugify = "0.1.0"
 
-gloo-timers = { version = "0.3.0", features = ["futures"] }
 chrono = "0.4.39"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gloo-timers = { version = "0.3.0", features = ["futures"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { version = "1.43.0", features = ["time"] }
