--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ serde_json = "1.0.139"
 slugify = "0.1.0"
 
 chrono = "0.4.39"
+strum = { version = "0.27.1", default-features = false, features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-timers = { version = "0.3.0", features = ["futures"] }
