--- a/dioxus-tw-components-sorttable-macro/Cargo.toml
+++ b/dioxus-tw-components-sorttable-macro/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "sorttable-macro"
+name = "dioxus-tw-components-sorttable-macro"
 version = "0.1.0"
 edition = "2024"
+authors = ["Ziale"]
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
