--- a/dioxus-tw-components-macro/Cargo.toml
+++ b/dioxus-tw-components-macro/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "dioxus-tw-components-macro"
 version = "0.1.0"
+description = "Macros used by dioxus-tw-components"
 edition = "2024"
 authors = ["Louis Truchelut"]
 license = "MIT OR Apache-2.0"
