--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Components made for Dioxus using TailwindCSS 3."
 readme = "README.md"
 homepage = "https://dioxuslabs.com"
 repository = "https://github.com/42Angouleme/dioxus-components"
-keywords = ["web", "desktop", "mobile", "gui", "wasm", "dioxus", "components"]
+keywords = ["web", "desktop", "gui", "dioxus", "components"]
 authors = ["Louis Truchelut", "kbz_8", "Ziale", "gpoblon", "42Angouleme"]
 
 [lib]
