--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -2,7 +2,7 @@ name: Main CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "fix/github-actions" ]
   pull_request:
     branches: [ "main" ]
 
