--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -51,10 +51,13 @@ jobs:
         - name: Prepare commit message for payload
           if: always()
           run: |
+            set -x
             CLEANED_COMMIT_MSG="${{ github.event.head_commit.message || github.event.pull_request.title }}"
+            echo $(jq --version)
             CLEANED_COMMIT_MSG="$(jq -n --arg msg \"$CLEANED_COMMIT_MSG\" '[$msg]' | jq '.[0]')"
             echo "CLEANED_COMMIT_MSG=$CLEANED_COMMIT_MSG" >> $GITHUB_ENV
             echo "CLEANED_COMMIT_MSG=$CLEANED_COMMIT_MSG"
+            set +x
 
         - name: Send custom JSON data to Slack workflow
           uses: slackapi/slack-github-action@v1.26.0
