--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -16,12 +16,17 @@ jobs:
       runs-on: ubuntu-latest
 
       steps: 
-        - name: Checkout
-          uses: actions/checkout@v4
+        - uses: actions/checkout@v4
+        - name: Install Rust
+          uses: dtolnay/rust-toolchain@master
+          with:
+            toolchain: stable
+            targets: x86_64-unknown-linux-gnu,wasm32-unknown-unknown
+        - uses: Swatinem/rust-cache@v2
+          with:
+            cache-all-crates: "true"
+            cache-on-failure: "false"
 
-        - name: Set up Rust
-          uses: dtolnay/rust-toolchain@stable
-        
         - name: Install rust tools
           run: |
             rustup update
@@ -29,10 +34,14 @@ jobs:
             rustup component add rustfmt
             cargo install cargo-audit
 
+        - name: Build
+          if: always()
+          run: cargo build
+
         - name: Run tests
           if: always()
           run: cargo test --all-features
-        
+
         - name: Run clippy
           if: always()
           run: cargo clippy --all-features -- -D warnings
