--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -73,6 +73,7 @@ jobs:
 
         - name: Send custom JSON data to Slack workflow
           uses: slackapi/slack-github-action@v1.26.0
+          continue-on-error: true
           with:
             payload: |
               {
