Actually use a JSON parser for escaping
Signed-off-by: xtrm <oss@xtrm.me>

--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -60,16 +60,10 @@ jobs:
             CLEANED_COMMIT_MSG: ${{ github.event.head_commit.message || github.event.pull_request.title }}
           run: |
             set -x
-            export | grep CLEANED_COMMIT_MSG
-            # Get the ansi-escaped message from bash's export builtin
-            CLEANED_COMMIT_MSG=$(export | grep CLEANED_COMMIT_MSG | cut -d= -f2- | sed -e 's/^\$//')
-            # The string will either be in the ansi-escaped $'...' format (with the dollar-sign removed), 
-            # or in the plain "..." format. Either way, we can strip the first and last characters to get
-            # the properly escaped message
-            CLEANED_COMMIT_MSG="${CLEANED_COMMIT_MSG:1:-1}"
+            # Prepare the commit message by passing it through jq to escape all double quotes
+            CLEANED_COMMIT_MSG="$(echo $CLEANED_COMMIT_MSG | jq -aRs .)"
             # Add the message to the environment variables for use in the next steps"
             echo "CLEANED_COMMIT_MSG=$CLEANED_COMMIT_MSG" >> $GITHUB_ENV
-            set +x
 
         - name: Send custom JSON data to Slack workflow
           uses: slackapi/slack-github-action@v1.26.0
